# saguaro

./: .gitignore  .mcp.json  .npmignore  CHANGELOG.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  RELEASING.md  _old_BUILD.bazel  _old_cli_package.json  _old_cr_package.json  _old_cr_tsconfig.json  _old_gitignore  biome.json  formula-code-review.rb.tmpl  formula-saguaro.rb.tmpl  install.sh  package.json  tsconfig.json
.claude/: settings.json
.gemini/: settings.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
.mesa/: config.yaml
.mesa/cache/: index.json
.mesa/history/: reviews.jsonl
.mesa/rules/: adapter-as-boundary-layer.md  agent-env-isolation.md  best-effort-non-critical-ops.md  config-loading-via-loadvalidatedconfig.md  daemon-store-json-serialization.md  dedup-parallel-worker-results.md  execfilesync-over-execsync.md  git-ref-validation.md  maxbuffer-for-git-diff.md  mesa-error-subclass-usage.md  tree-sitter-parser-cleanup.md  tui-no-adapter-bypass.md  yaml-quote-special-chars.md  zod-schema-strict-mode.md
.saguaro/rules/: adapter-as-boundary-layer.md  agent-env-isolation.md  best-effort-non-critical-ops.md  config-loading-via-loadvalidatedconfig.md  daemon-store-json-serialization.md  (+9 more)
docs/: ARCHITECTURE.md  writing-rules.md
evals/: run.ts  scorer.ts  types.ts
plans/: 011-code-review-agent-v2.md  ARCHITECTURE.md  README.md  design-chart.md  example.md  writing-rules.md
scripts/: brew-simulate.sh  brew-verify.sh  postinstall.cjs
src/: build-info.ts  index.ts
(+361 files in other folders)
