# Stub: required by npm_translate_lock for pnpm workspace resolution.
load("@aspect_rules_js//js:defs.bzl", "js_library")
load("@aspect_rules_js//npm:defs.bzl", "npm_package")
load("@npm//:defs.bzl", "npm_link_all_packages")

npm_link_all_packages(name = "node_modules")

js_library(
    name = "lib",
    srcs = glob(["src/**/*.ts"]) + ["package.json"],
    visibility = ["//visibility:public"],
)

npm_package(
    name = "pkg",
    srcs = [":lib"],
    visibility = ["//visibility:public"],
)
